--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 server.port=8090
 server.servlet.contextPath=/capy-economy/api
 
-
-spring.datasource.url=jdbc:mysql://localhost:3306/dbeconomy?useSSL=false&allowPublicKeyRetrieval=true
+#&allowPublicKeyRetrieval=true
+#spring.jpa.show-sql=true
+#spring.sql.init.mode=always
+#spring.sql.init.platform=mysql
+#spring.jpa.defer-datasource-initialization=true
+spring.datasource.url=jdbc:mysql://localhost:3306/dbeconomy?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root2023
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
