Servicio para los Cargos de los Créditos finalizado.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8090
 server.servlet.contextPath=/capy-economy/api
 
 #&allowPublicKeyRetrieval=true
@@ -6,11 +6,11 @@ server.servlet.contextPath=/capy-economy/api
 #spring.sql.init.mode=always
 #spring.sql.init.platform=mysql
 #spring.jpa.defer-datasource-initialization=true
-spring.datasource.url=jdbc:mysql://localhost:3306/dbeconomy?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/dbeconomy?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=root2023
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
