Obtener los Créditos y Cargos desde el ID de la Institución

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/dbeconomy?useSSL=false&allowPu
 spring.datasource.username=root
 spring.datasource.password=root2023
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
