--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,13 @@
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 			<version>3.1.5</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.6.1</version>
+		</dependency>
+
 
 	</dependencies>
 
